# nano-vllm

./: .gitignore  Makefile  PLAN.md  README.md  setup_models.sh
docs/: 02-continuous-batching.md
include/: backend.h  log.h  model.h  nano_cuda.h  ops.h  scheduler.h  structs.h
kernels/cpu/: attention.c  kernels.c  layers.c  visualizer.c
kernels/gpu/: attention.cu  layers.cu  nano_cuda.h
python_ref/: README.md  export_binary.py  model.py  pyproject.toml  verify_binary.py
src/: log.c  main.c  memory.c  model.c  sampler.c  scheduler.c  tokenizer.c  visualizer.c
src/kernels/: attention.c
tests/: test_chunked_prefill.c  test_continuous_batching.c  test_matmul.cu  test_paged_attention.c
tools/: convert_llama2c.py  export_binary.py  inspect_tokenizer.c  verify_llama2c_header.c
